--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,1 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ]
-}
+{ "version": 2, "rewrites": [{ "source": "/index.js", "destination": "/" }] }
