--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "rewrites": [{ "source": "/index.js", "destination": "/" }] }
+{ "version": 2, "rewrites": [{ "source": "/*", "destination": "/" }] }
